fix: more layout issues caused by modals

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,17 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html {
+  overflow-x: initial !important;
+  overflow-y: initial !important;
+}
+
+body {
   /* Prevent tooltips (e.g. in study queue modal) from pushing the page out */
   overflow-x: hidden;
-  overflow-y: visible;
+  overflow-y: scroll !important;
+  width: initial !important;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
